--- a/Codes/caramoan_biography_itad.html
+++ b/Codes/caramoan_biography_itad.html
@@ -26,7 +26,7 @@
 		<!-- CARAMOAN, JOHN MATTHEW-->
     <hr width="75%" size="3" color="lime" noshade>
     <hr width="70%" size="3" color="lime" noshade>
-    <h1 style= "font-size: 3em;color:#28acea"><i><center>About Me</center></i></h1>
+    <h1 id="main" style= "font-size: 3em;color:#28acea"><i><center>About Me</center></i></h1>
 	<center>Nav: <a href="#childhood">Childhood Years</a> &gt; <a href="#teenage">Teenage Years</a> &gt; <a href="#college">College Years</a></center><br>
 	<center><a href="CARAMOAN_LandingPage_ITAD.html">Go back to Landing Page</a></center>
     <hr width="70%" size="3" color="lime" noshade>
