--- a/Codes/CARAMOAN_PhotoGallery_ITAD.html
+++ b/Codes/CARAMOAN_PhotoGallery_ITAD.html
@@ -32,7 +32,7 @@
 		
 		<a href="https://media.tenor.com/ySXsof0iKH4AAAAC/link-pixel-art.gif"><img class="b" src="https://media.tenor.com/ySXsof0iKH4AAAAC/link-pixel-art.gif" alt="Link's posing gif" title="Link's gif"/></a>
 		
-		<a href="https://static.wikia.nocookie.net/deathbattle/images/7/7f/Ganon_%28Oot%29_Sprite.gif/revision/latest/smart/width/300/height/300?cb=20210201000656"><img style="transform:scaleX(-1)" class="c" src="https://static.wikia.nocookie.net/deathbattle/images/7/7f/Ganon_%28Oot%29_Sprite.gif/revision/latest/smart/width/300/height/300?cb=20210201000656" alt="Link's natural enemy gif" title="Ganondorf"/></a>
+		<a href="https://media.tenor.com/ONTLDmstt60AAAAC/zelda-games-game.gif"><img class="c" src="https://media.tenor.com/ONTLDmstt60AAAAC/zelda-games-game.gif" alt="Link's enemy gif" title="Mask"/></a>
 		
 		<a href="https://media.giphy.com/media/jubLJwkWhtqmOA2bJg/giphy.gif"><img class="b" src="https://media.giphy.com/media/jubLJwkWhtqmOA2bJg/giphy.gif" alt="Valorant Jett gif" title="Valorant Agent Jett"/></a>
 		
