--- a/Codes/CARAMOAN_PhotoGallery_ITAD.html
+++ b/Codes/CARAMOAN_PhotoGallery_ITAD.html
@@ -37,6 +37,24 @@
 		<a href="https://media.giphy.com/media/jubLJwkWhtqmOA2bJg/giphy.gif"><img class="b" src="https://media.giphy.com/media/jubLJwkWhtqmOA2bJg/giphy.gif" alt="Valorant Jett gif" title="Valorant Agent Jett"/></a>
 		
 		<a href="https://preview.redd.it/ad5pjhf1jfu81.gif?width=610&auto=webp&s=4530569792c8f3fc31611ffd37ac918c6f97a4d1"><img style="transform:scaleX(-1)" class="c" src="https://preview.redd.it/ad5pjhf1jfu81.gif?width=610&auto=webp&s=4530569792c8f3fc31611ffd37ac918c6f97a4d1" alt="Valorant Neon gif" title="Valorant Agent Neon"/></a>
+			
+		<a href="https://www.readandspell.com/sites/default/files//blog/HowToImproveTypingSpeed_0.jpg"><img src="https://www.readandspell.com/sites/default/files//blog/HowToImproveTypingSpeed_0.jpg" alt="Typing skill image" title="Typing skill"/></a>
+		
+		<a href="https://i.pinimg.com/originals/58/70/06/587006e4547758818a5f91257aae836d.gif"><img src="https://i.pinimg.com/originals/58/70/06/587006e4547758818a5f91257aae836d.gif" alt="Bass Guitar" title="Bass Guitar"/></a>
+		
+		<a href="https://www.shutterstock.com/image-photo/drum-stick-on-green-table-260nw-1462745552.jpg"><img src="https://www.shutterstock.com/image-photo/drum-stick-on-green-table-260nw-1462745552.jpg" alt="A drums' snare with a teal background" title="Drums"/></a>
+		
+		<a href="https://i.pinimg.com/originals/99/93/4d/99934d76adb434ccf16f91340c8ac0ad.png"><img src="https://i.pinimg.com/originals/99/93/4d/99934d76adb434ccf16f91340c8ac0ad.png" alt="Aqua from kingdom hearts" title="Aqua from Kingdom Hearts"/></a>
+		
+		<a href="https://64.media.tumblr.com/62087cbf41325b77017c3fccfec6da29/tumblr_pt74kt6fbH1ww81r3o1_540.png"><img src="https://64.media.tumblr.com/62087cbf41325b77017c3fccfec6da29/tumblr_pt74kt6fbH1ww81r3o1_540.png" alt="Bass Guitar" title="Bass Guitar Image"/></a>
+		
+		<a href="https://previews.123rf.com/images/karpenkoilia/karpenkoilia1505/karpenkoilia150500224/39761912-smiling-programmer-to-program-code-pixel-art.jpg"><img src="https://previews.123rf.com/images/karpenkoilia/karpenkoilia1505/karpenkoilia150500224/39761912-smiling-programmer-to-program-code-pixel-art.jpg" alt="A programmer" title="Programming"/></a>
+		
+		<a href="https://img.freepik.com/free-vector/music-studio-control-room-singer-booth_107791-1637.jpg"><img src="https://img.freepik.com/free-vector/music-studio-control-room-singer-booth_107791-1637.jpg" alt="Sound mixing image" title="Sound Mixing"/></a>
+		
+		<a href="https://previews.123rf.com/images/saphatthachat/saphatthachat1711/saphatthachat171100059/89626580-vector-pixel-art-song-note-set-on-white-background-vector-illustration.jpg"><img src="https://previews.123rf.com/images/saphatthachat/saphatthachat1711/saphatthachat171100059/89626580-vector-pixel-art-song-note-set-on-white-background-vector-illustration.jpg" alt="Musical Notes image" title="Musical Notes"/></a>
+		
+		<a href="https://cdn5.vectorstock.com/i/1000x1000/70/44/pixel-art-style-ping-pong-and-rackets-sport-table-vector-6907044.jpg"><img src="https://cdn5.vectorstock.com/i/1000x1000/70/44/pixel-art-style-ping-pong-and-rackets-sport-table-vector-6907044.jpg" alt="Table Tennis pixel art" title="Table Tennis"/></a>
     </center>
 	
 	<center><a href="#main">Go to TOP</a></center>
