--- a/Codes/CARAMOAN_LandingPage_ITAD.html
+++ b/Codes/CARAMOAN_LandingPage_ITAD.html
@@ -8,6 +8,9 @@
 	<body>
 		<!-- CARAMOAN, JOHN MATTHEW-->
     <h5 id="main">Webhost Link: <a href="https://biographyofcaramoan.000webhostapp.com/CARAMOAN%20-%20ITAD/CARAMOAN_LandingPage_ITAD.html">Webhost Link</a>
+	    <br><br>
+	Github Link: 
+	<a href="https://jmcaramoan.github.io/LandingPage/Codes/CARAMOAN_LandingPage_ITAD.html">Github Link</a>
     </h5>
     <hr width="100%" size="3" color="lime" noshade>
     <h1 style= "font-size: 3em;color:#28acea"><i><center>Landing Page</center></i></h1>
