--- a/Codes/CARAMOAN_ITAD_SKILLS.html
+++ b/Codes/CARAMOAN_ITAD_SKILLS.html
@@ -30,7 +30,10 @@
 	}
 	img:hover{
 	opacity:0.80;
-}
+	}
+	body{
+	background-image:linear-gradient(to top right,#797EF6, #ffcceb);
+	}
 	</style>
     
 		<!-- CARAMOAN, JOHN MATTHEW-->
