--- a/Codes/CARAMOAN_RESUME_ITAD.html
+++ b/Codes/CARAMOAN_RESUME_ITAD.html
@@ -18,7 +18,7 @@
     <p><center>
       My Name is Caramoan, John Matthew and I live in Quezon City. I am currently 20 years old and my objective is to find work that aligns with my experience. <br><br>
       You can check more about me on
-      <a href="https://codepen.io/Caramoan-J/pen/dyjgrWV?editors=1000">this link</a>
+      <a href="caramoan_biography_itad.html">this link</a>
       and you can contact me through 
   <a href="mailto:caramoan.johnmatthew@ue.edu.ph">here</a>.
       </center></p>
