--- a/Codes/CARAMOAN_ITAD_SKILLS.html
+++ b/Codes/CARAMOAN_ITAD_SKILLS.html
@@ -6,6 +6,9 @@
 	</head>
 	<body style="background-color:azure;color:#5c6dc9;font-family:Verdana, Sans-serif;">
 	<style>
+	html{
+	scroll-behavior: smooth;
+	}
 	h1, h2{
 		font-family: Georgia, Times New Roman, serif;
 		color: #384bb4 !important;
