--- a/Codes/CARAMOAN_LandingPage_ITAD.html
+++ b/Codes/CARAMOAN_LandingPage_ITAD.html
@@ -64,6 +64,16 @@
 		</a>
 	</p>
     <!-- <a href="CARAMOAN_CARAMOAN_MyBeat_ITAD.html">Link to "My Beat"</a> -->
+	    
+	<h2>My Kind of Film</h2>
+	<p>
+		This sections shows all the TV shows and movies I have. <br><br>
+		Click Me<br>
+		<a href="CARAMOAN_MyFilm_ITAD.html">
+		<img src="https://fsa.zobj.net/crop.php?r=pqWcJ-myHxaC50twnDJ7Mng3TP0TS8loPL9K-G0yg-2K47Uv6LQXsLrZI4x6x474vXf6gFjxr_md9xyzwplT8x8VIuUERyoe6Ht3RjVgcGEkH5TDgm22XU7xqQGcjhb2jUJTdBGOgjqWrWe5TUNyGlzSsxDnFIVQrD-3hkwhEAelkbqsDUL7TPWV4V-R2x5B5iruxEE6RhbfiAgp.jpg">
+		</a>
+	</p>
+    <!-- <a href="CARAMOAN_CARAMOAN_MyBeat_ITAD.html">Link to "My Beat"</a> -->
 	
 	
 	This is the last page, click <a href="#main">here</a> to go back.
