--- a/Codes/CARAMOAN_MyBeat_ITAD.html
+++ b/Codes/CARAMOAN_MyBeat_ITAD.html
@@ -19,7 +19,7 @@
     <h2>GENRES</h2>
 	<p> 
 		Click Me<br>
-		<a href="CARAMOAN_OPM.html"><img src="https://cdna.artstation.com/p/assets/images/images/049/028/938/large/berfin-ceylan-kirby.jpg?1651526301.jpg"></a>
+		<a href="CARAMOAN_OPM.html"><img src="https://yt3.googleusercontent.com/oCrIo8aZXJjQ-nygCY2VCBeHO4Ny843P1CO-wuWS2efsr79c-yNxdhg17lC25l09cuC5iRVt=s900-c-k-c0x00ffffff-no-rj"></a>
 		<br>
 		<strong><u>OPMs</u></strong>
 	</p>
@@ -27,7 +27,7 @@
 
 	<p>
 		Click Me<br>
-		<a href="CARAMOAN_Rock.html"><img src="https://cdna.artstation.com/p/assets/images/images/049/028/938/large/berfin-ceylan-kirby.jpg?1651526301.jpg"></a>
+		<a href="CARAMOAN_Rock.html"><img src="https://img.freepik.com/free-vector/illustration-guitar-two-microphones-wings_1284-52497.jpg"></a>
 		<br>
 		<strong><u>Rock</u></strong>
 	</p>
@@ -35,14 +35,11 @@
 
 	<p>
 		Click Me<br>
-		<a href="CARAMOAN_JPN.html"><img src="https://cdna.artstation.com/p/assets/images/images/049/028/938/large/berfin-ceylan-kirby.jpg?1651526301.jpg"></a>
+		<a href="CARAMOAN_JPN.html"><img src="https://cdn.dribbble.com/users/3228050/screenshots/7862080/media/df9c45519447b19261f35e2645442ead.jpg?compress=1&resize=400x300"></a>
 		<br>
 		<strong><u>Japanese Songs</u></strong>
 	</p>
     
-    
-	
-	
 	This is the last page, click <a href="#main">here</a> to go back.
     </center>
 	
