--- a/Codes/CARAMOAN_OPM.html
+++ b/Codes/CARAMOAN_OPM.html
@@ -13,42 +13,40 @@
     <hr width="100%" size="3" color="lime" noshade>
     <center>
 	<p>
-		<img src="https://cdna.artstation.com/p/assets/images/images/049/028/938/large/berfin-ceylan-kirby.jpg?1651526301.jpg">
+		<img src="https://i.scdn.co/image/ab67616d0000b2737dd3606b398e372fd4496014">
 		<br>
 		<strong><u>Hey Barbara - IVOS</u></strong>
 		<br><br>
 		<audio controls>
-  		<source src="horse.mp3" type="audio/mpeg">
+  		<source src="Audio/HeyBarbara.mp3" type="audio/mpeg">
 			Your browser does not support the audio element.
 		</audio>
 	</p>
     	<br><br>
 
 	<p>
-		<img src="https://cdna.artstation.com/p/assets/images/images/049/028/938/large/berfin-ceylan-kirby.jpg?1651526301.jpg">
+		<img src="https://i.scdn.co/image/ab67616d0000b273667ee395df92e8bae534344a">
 		<br>
 		<strong><u>Pasilyo - SunKissed Lola</u></strong>
 		<br><br>
 		<audio controls>
-  		<source src="horse.mp3" type="audio/mpeg">
+  		<source src="Audio/Pasilyo.mp3" type="audio/mpeg">
 			Your browser does not support the audio element.
 		</audio>
 	</p>
     	<br><br>
 
 	<p>
-		<img src="https://cdna.artstation.com/p/assets/images/images/049/028/938/large/berfin-ceylan-kirby.jpg?1651526301.jpg">
+		<img src="https://i.scdn.co/image/ab67616d0000b273d044f1d1f012f30282637d81">
 		<br>
 		<strong><u>Uhaw - Dilaw</u></strong>
 		<br><br>
 		<audio controls>
-  		<source src="horse.mp3" type="audio/mpeg">
+  		<source src="Audio/Uhaw.mp3" type="audio/mpeg">
 			Your browser does not support the audio element.
 	</audio>
 	</p>
     
-	
-	
 	This is the last page, click <a href="#main">here</a> to go back.
     </center>
 	
