--- a/Codes/CARAMOAN_Rock.html
+++ b/Codes/CARAMOAN_Rock.html
@@ -13,36 +13,36 @@
     <hr width="100%" size="3" color="lime" noshade>
     <center>
 	<p>
-		<img src="https://cdna.artstation.com/p/assets/images/images/049/028/938/large/berfin-ceylan-kirby.jpg?1651526301.jpg">
+		<img src="https://upload.wikimedia.org/wikipedia/en/a/a7/MCRTeenagers.jpg">
 		<br>
 		<strong><u>Teenagers - My Chemical Romance</u></strong>
 		<br><br>
 		<audio controls>
-  		<source src="horse.mp3" type="audio/mpeg">
+  		<source src="Audio/Teenagers.mp3" type="audio/mpeg">
 			Your browser does not support the audio element.
 		</audio>
 	</p>
     	<br><br>
 
 	<p>
-		<img src="https://cdna.artstation.com/p/assets/images/images/049/028/938/large/berfin-ceylan-kirby.jpg?1651526301.jpg">
+		<img src="https://upload.wikimedia.org/wikipedia/en/thumb/7/74/Paramore_-_That%27s_What_You_Get.jpg/220px-Paramore_-_That%27s_What_You_Get.jpg">
 		<br>
 		<strong><u>That's What You Get - Paramore</u></strong>
 		<br><br>
 		<audio controls>
-  		<source src="horse.mp3" type="audio/mpeg">
+  		<source src="Audio/Thats_What_You_Get.mp3" type="audio/mpeg">
 			Your browser does not support the audio element.
 		</audio>
 	</p>
     	<br><br>
 
 	<p>
-		<img src="https://cdna.artstation.com/p/assets/images/images/049/028/938/large/berfin-ceylan-kirby.jpg?1651526301.jpg">
+		<img src="https://i.scdn.co/image/ab67616d0000b273e1791251d30cd8f6ef693154">
 		<br>
 		<strong><u>I Don't Love You - My Chemical Romance</u></strong>
 		<br><br>
 		<audio controls>
-  		<source src="horse.mp3" type="audio/mpeg">
+  		<source src="Audio/I_Dont_Love_You.mp3" type="audio/mpeg">
 			Your browser does not support the audio element.
 	</audio>
 	</p>
