--- a/Codes/CARAMOAN_JPN.html
+++ b/Codes/CARAMOAN_JPN.html
@@ -13,36 +13,36 @@
     <hr width="100%" size="3" color="lime" noshade>
     <center>
 	<p>
-		<img src="https://cdna.artstation.com/p/assets/images/images/049/028/938/large/berfin-ceylan-kirby.jpg?1651526301.jpg">
+		<img src="https://images.genius.com/ea0ed207d97747fc8130b39be4748564.1000x1000x1.jpg">
 		<br>
 		<strong><u>Tabun - YOASOBI</u></strong>
 		<br><br>
 		<audio controls>
-  		<source src="horse.mp3" type="audio/mpeg">
+  		<source src="Audio/Tabun.mp3" type="audio/mpeg">
 			Your browser does not support the audio element.
 		</audio>
 	</p>
     	<br><br>
 
 	<p>
-		<img src="https://cdna.artstation.com/p/assets/images/images/049/028/938/large/berfin-ceylan-kirby.jpg?1651526301.jpg">
+		<img src="https://i.scdn.co/image/ab67616d0000b2733dcf67594e3c4f8f2dba0b82">
 		<br>
 		<strong><u>Bad Example - Takayan</u></strong>
 		<br><br>
 		<audio controls>
-  		<source src="horse.mp3" type="audio/mpeg">
+  		<source src="Audio/BadExample.mp3" type="audio/mpeg">
 			Your browser does not support the audio element.
 		</audio>
 	</p>
     	<br><br>
 
 	<p>
-		<img src="https://cdna.artstation.com/p/assets/images/images/049/028/938/large/berfin-ceylan-kirby.jpg?1651526301.jpg">
+		<img src="https://images.genius.com/0c17eb4a2364958fb2a403ea6680585d.902x902x1.jpg">
 		<br>
 		<strong><u>Napori - Vaundy</u></strong>
 		<br><br>
 		<audio controls>
-  		<source src="horse.mp3" type="audio/mpeg">
+  		<source src="Audio/Napori.mp3" type="audio/mpeg">
 			Your browser does not support the audio element.
 	</audio>
 	</p>
