--- a/Codes/CARAMOAN_MyFilm_ITAD.html
+++ b/Codes/CARAMOAN_MyFilm_ITAD.html
@@ -18,7 +18,7 @@
 	
     	<p> 
 		Click Me<br>
-		<a href="CARAMOAN_TVShow.html"><img src="https://cdna.artstation.com/p/assets/images/images/049/028/938/large/berfin-ceylan-kirby.jpg?1651526301.jpg"></a>
+		<a href="CARAMOAN_TVShow.html"><img src="https://i.pinimg.com/originals/e7/bd/ad/e7bdad0daad96021feda64d88000386d.gif"></a>
 		<br>
 		<strong><u>TV Shows</u></strong>
 	</p>
@@ -26,7 +26,7 @@
 
 	<p>
 		Click Me<br>
-		<a href="CARAMOAN_Movie.html"><img src="https://cdna.artstation.com/p/assets/images/images/049/028/938/large/berfin-ceylan-kirby.jpg?1651526301.jpg"></a>
+		<a href="CARAMOAN_Movie.html"><img src="https://media.tenor.com/ZAhCdRwFJNMAAAAd/movies-theatre.gif"></a>
 		<br>
 		<strong><u>Movies</u></strong>
 	</p>
