--- a/Codes/CARAMOAN_TVShow.html
+++ b/Codes/CARAMOAN_TVShow.html
@@ -17,22 +17,22 @@
 	</p>	
 	
     	<p> 
-		<video width="320" height="240" controls>
-  			<source src="movie.mp4" type="video/mp4">
+		<video width="520" height="340" poster="https://upload.wikimedia.org/wikipedia/commons/thumb/9/98/International_Pok%C3%A9mon_logo.svg/1200px-International_Pok%C3%A9mon_logo.svg.png" controls>
+  			<source src="Video/TV/Pokemon.mp4" type="video/mp4">
   				Your browser does not support the video tag.
 		</video>
 		<br>
-		<strong><u>TV Shows 1</u></strong>
+		<strong><u>Pokemon Series</u></strong>
 	</p>
     	<br><br>
 
 	<p>
-		<video width="320" height="240" controls>
-  			<source src="movie.mp4" type="video/mp4">
+		<video width="520" height="340" poster="https://images2.minutemediacdn.com/image/upload/c_fill,w_1440,ar_16:9,f_auto,q_auto,g_auto/shape/cover/sport/62455-shout-factory1-869b74b647b88045caac956956bd1ff8.jpg" controls>
+  			<source src="Video/TV/MrBean.mp4" type="video/mp4">
   				Your browser does not support the video tag.
 		</video>
 		<br>
-		<strong><u>TV Shows 2</u></strong>
+		<strong><u>Mr. Bean</u></strong>
 	</p>
 	
 	This is the last page, click <a href="#main">here</a> to go back.
