--- a/Codes/CARAMOAN_Movie.html
+++ b/Codes/CARAMOAN_Movie.html
@@ -17,22 +17,22 @@
 	</p>	
 	
     	<p> 
-		<video width="320" height="240" controls>
-  			<source src="movie.mp4" type="video/mp4">
+		<video width="520" height="340" poster="https://pic-bstarstatic.akamaized.net/ugc/4f10c270b1733557a1002b9b2b7061c0.jpeg" controls>
+  			<source src="Video/Movie/HowlsMovingCastle.mp4" type="video/mp4">
   				Your browser does not support the video tag.
 		</video>
 		<br>
-		<strong><u>Movie 1</u></strong>
+		<strong><u>Howl's Moving Castle</u></strong>
 	</p>
     	<br><br>
 
 	<p>
-		<video width="320" height="240" controls>
-  			<source src="movie.mp4" type="video/mp4">
+		<video width="520" height="340" poster="https://www.cnet.com/a/img/resize/0394d3c34ea15653512da913806923e2722cfce3/hub/2022/02/15/522fb8f4-bdfa-44f3-89b3-9c6d82d7358e/sonic22.jpg?auto=webp&fit=crop&height=900&width=1200" controls>
+  			<source src="Video/Movie/SonicTheHedgehog.mp4" type="video/mp4">
   				Your browser does not support the video tag.
 		</video>
 		<br>
-		<strong><u>Movie 2</u></strong>
+		<strong><u>Sonic the Hedgehog</u></strong>
 	</p>
 	
 	This is the last page, click <a href="#main">here</a> to go back.
