--- a/Codes/caramoan_biography_itad.html
+++ b/Codes/caramoan_biography_itad.html
@@ -9,7 +9,8 @@
 	<style>
 	h1{
 		font-family: Georgia, Times New Roman, serif;
-		color: #384bb4
+		color: #384bb4;
+		text-decoration: overline;
 	}
 	p{
 		font-family: Verdana, sans-serif;
@@ -27,19 +28,25 @@
     <hr width="75%" size="3" color="lime" noshade>
     <hr width="70%" size="3" color="lime" noshade>
     <h1 id="main" style= "font-size: 3em;color:#28acea"><i><center>About Me</center></i></h1>
-	<center>Nav: <a href="#childhood">Childhood Years</a> &gt; <a href="#teenage">Teenage Years</a> &gt; <a href="#college">College Years</a></center><br>
+	<center>Navigations: <a href="#childhood">Childhood Years</a> &gt; <a href="#teenage">Teenage Years</a> &gt; <a href="#college">College Years</a></center><br>
 	<center><a href="CARAMOAN_LandingPage_ITAD.html">Go back to Landing Page</a></center>
     <hr width="70%" size="3" color="lime" noshade>
     <hr width="75%" size="3" color="lime" noshade>
     <br>
-    
+	
     <h1 id="childhood"><b><center> Childhood Years </center></b></h1>
-	<center><a href="childhood.jpg"><img class="a" src="childhood.jpg" alt="My picture beside a christmas light" title="My Picture"/></a></center>
+	<center>
+	<a href="Image/childhood.jpg"><img class="a" src="Image/childhood.jpg" alt="My picture" title="My Picture holding a butterfly"/></a>
+	
+	<a href="Image/childhood2.jpg"><img class="a" src="Image/childhood2.jpg" alt="2nd picture" title="My 2nd childhood picture"/></a>
+	
+	<a href="Image/childhood3.jpg"><img class="a" src="Image/childhood3.jpg" alt="2nd picture" title="My 3rd childhood picture"/></a>
+	</center>
     <div align = "justify">
     <blockquote><p>
 	<a href="https://media.tenor.com/upy0CZ6C0I0AAAAC/eevee-pokemon.gif"><img class="b" src="https://media.tenor.com/upy0CZ6C0I0AAAAC/eevee-pokemon.gif" alt="Eevee gif picture" title="Eevee's Picture"/></a>
      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-      <sup>1</sup><mark>During my childhood years</mark>, I lived in a small house in Caloocan and I studied at <abbr title="Holy Angel School of Caloocan"> <strong>HASC</strong></abbr> where I graduated from primary school. <sup>2</sup>When I was a child, I had very little socializing experience because my grandfather did not want me to leave our house because the children outside were too dirty and lacks respect towards their parents. <sup>3</sup>It was the best time of my childhood even though I don’t have many friends because I get to watch television all day without many activities to do. <sup>4</sup>I remember when me and my brother used to play in our house with our consoles. <sup>5</sup>We sometimes play as if we are the character in that specific video game. <sup>6</sup>We also had a housemaid back then who cleans after we do our mess and also plays with us. <sup>7</sup>She is our 2nd hired maid because the first one was very harsh towards my brother because she can’t handle my brother’s attitude. <sup>8</sup>Our 2nd maid was also fired because of the issue that happened between her and one of our family members. <sup>9</sup>The 3rd one stayed the longest because we didn’t have any issue towards her. </blockquote><br><br>
+      <sup>1</sup><mark>During my childhood years</mark>, I lived in a subdivision in Novaliches and I studied at <abbr title="Holy Angel School of Caloocan"> <strong>HASC</strong></abbr> where I graduated from primary school. <sup>2</sup>When I was a child, I had very little socializing experience because my grandfather did not want me to leave our house because the children outside were too dirty and lacks respect towards their parents. <sup>3</sup>It was the best time of my childhood even though I don’t have many friends because I get to watch television all day without many activities to do. <sup>4</sup>I remember when me and my brother used to play in our house with our consoles. <sup>5</sup>We sometimes play as if we are the character in that specific video game. <sup>6</sup>We also had a housemaid back then who cleans after we do our mess and also plays with us. <sup>7</sup>She is our 2nd hired maid because the first one was very harsh towards my brother because she can’t handle my brother’s attitude. <sup>8</sup>Our 2nd maid was also fired because of the issue that happened between her and one of our family members. <sup>9</sup>The 3rd one stayed the longest because we didn’t have any issue towards her. </blockquote><br><br>
       </div>
       <div align = "justify">
           <blockquote>
@@ -53,8 +60,15 @@
 	  <center><a href="#main">Go to TOP</a></center>
       
     <hr width="75%" size="3" color="lime" noshade>
-    <h1 id="teenage"><b><center> Teenage Years</center></b></h1>
-    <center><a href="Formal Pic hehe.jpg"><img class="a" src="Formal Pic hehe.jpg" alt="My picture on a train" title="My Picture 2"/></a></center>
+	
+	<h1 id="teenage"><b><center> Teenage Years</center></b></h1>
+    <center>
+	<a href="Image/Formal Pic hehe.jpg"><img class="a" src="Image/Formal Pic hehe.jpg" alt="My picture on a train" title="My Picture on a train"/></a>
+	
+	<a href="Image/Teenage2.jpg"><img class="a" src="Image/Teenage2.jpg" alt="My picture on a drums" title="Me, playing drums"/></a>
+	
+	<a href="Image/Teenage3.jpg"><img class="a" src="Image/Teenage3.jpg" alt="My picture on a train" title="My Picture 2"/></a>
+	</center>
     <blockquote>
       <p>
           <div align = "justify">
@@ -73,10 +87,16 @@
       </p>
     </blockquote>
 	<center><a href="#main">Go to TOP</a></center>
-	
+
     <hr width="75%" size="3" color="lime" noshade>
     <h1 id="college"><b><center>College Years</center></b></h1>
-    <center><a href="huehue.png"><img class="a" src="huehue.png" alt="My picture taking a selfie" title="My Picture 3"/></a></center>
+    <center>
+	<a href="Image/huehue.png"><img class="a" src="Image/huehue.png" alt="My picture taking a selfie" title="My Picture 3"/></a>
+	
+	<a href="Image/College2.jpg"><img class="a" src="Image/College2.jpg" alt="My picture taking a selfie" title="My Picture 3"/></a>
+	
+	<a href="Image/College3.jpg"><img class="a" src="Image/College3.jpg" alt="My picture taking a selfie" title="My Picture 3"/></a>
+	</center>
     <p>
       <blockquote>
           <div align = "justify">
@@ -94,5 +114,6 @@
     </blockquote>
     </p>
 	<center><a href="#main">Go to TOP</a></center>
+	<hr width="75%" size="3" color="lime" noshade>
 	</body>
 </html>
