--- a/Codes/CARAMOAN_RESUME_ITAD.html
+++ b/Codes/CARAMOAN_RESUME_ITAD.html
@@ -15,13 +15,17 @@
 	<center><a href="CARAMOAN_LandingPage_ITAD.html">Go back to Landing Page</a></center>
     <hr width="100%" size="3" color="lime" noshade>
     
-    <p><center>
+    <p>
+	<center>
       My Name is Caramoan, John Matthew and I live in Quezon City. I am currently 20 years old and my objective is to find work that aligns with my experience. <br><br>
       You can check more about me on
       <a href="caramoan_biography_itad.html">this link</a>
       and you can contact me through 
   <a href="mailto:caramoan.johnmatthew@ue.edu.ph">here</a>.
-      </center></p>
+	</center>
+      </p>
+	  
+	  <center><a href="Image/Formal.jpg"><img src="Image/Formal.jpg" title="Formal Pic"></a></center>
     
     <h2 id="ITSkill"> Technical IT Skills </h2>
     <ul class="Class" type="disc">
