--- a/Codes/CARAMOAN_OPM.html
+++ b/Codes/CARAMOAN_OPM.html
@@ -13,9 +13,10 @@
     <hr width="100%" size="3" color="lime" noshade>
     <center>
 	<p>
-		<img src="https://i.scdn.co/image/ab67616d0000b2737dd3606b398e372fd4496014">
+		<img id="opm" src="https://i.scdn.co/image/ab67616d0000b2737dd3606b398e372fd4496014">
 		<br>
-		<strong><u>Hey Barbara - IVOS</u></strong>
+		<strong><u>Hey Barbara - IVOS</u></strong><br>
+		Hey Barbara is the second digital single by IV Of Spades and it was released on July 13, 2017.'Hey Barbara' behind the song story: it was all about a prostitute woman who changes her name everynight.
 		<br><br>
 		<audio controls>
   		<source src="Audio/HeyBarbara.mp3" type="audio/mpeg">
@@ -25,9 +26,10 @@
     	<br><br>
 
 	<p>
-		<img src="https://i.scdn.co/image/ab67616d0000b273667ee395df92e8bae534344a">
+		<img id="opm" src="https://i.scdn.co/image/ab67616d0000b273667ee395df92e8bae534344a">
 		<br>
-		<strong><u>Pasilyo - SunKissed Lola</u></strong>
+		<strong><u>Pasilyo - SunKissed Lola</u></strong><br>
+		"Pasilyo" (transl.Aisle) is a song recorded by Filipino band SunKissed Lola. It was released on October 28, 2022, by Ditto Music as their third single overall. The song was written by Alvin Serito and collaboratively produced by the band members. Lead vocalist Dan Ombao explained that the concept of the song is to live the dream of being married someday and being someone's certainty.
 		<br><br>
 		<audio controls>
   		<source src="Audio/Pasilyo.mp3" type="audio/mpeg">
@@ -37,9 +39,10 @@
     	<br><br>
 
 	<p>
-		<img src="https://i.scdn.co/image/ab67616d0000b273d044f1d1f012f30282637d81">
+		<img id="opm" src="https://i.scdn.co/image/ab67616d0000b273d044f1d1f012f30282637d81">
 		<br>
-		<strong><u>Uhaw - Dilaw</u></strong>
+		<strong><u>Uhaw - Dilaw</u></strong><br>
+		The track is the indie rock duo’s third single of 2022. The romantic ballad sees the duo opting for a softer sonic palette, employing a melodious major-key composition and more spacious arrangements. Showcasing his delicate falsetto, lead vocalist Dilaw Obero sings about desiring connection with a love interest: “Ako’y giniginaw halika rito / Dito ka lang sa tabi ko / Mananatiling uhaw
 		<br><br>
 		<audio controls>
   		<source src="Audio/Uhaw.mp3" type="audio/mpeg">
