--- a/Codes/CARAMOAN_Rock.html
+++ b/Codes/CARAMOAN_Rock.html
@@ -13,9 +13,10 @@
     <hr width="100%" size="3" color="lime" noshade>
     <center>
 	<p>
-		<img src="https://upload.wikimedia.org/wikipedia/en/a/a7/MCRTeenagers.jpg">
+		<img id="rock" src="https://upload.wikimedia.org/wikipedia/en/a/a7/MCRTeenagers.jpg">
 		<br>
-		<strong><u>Teenagers - My Chemical Romance</u></strong>
+		<strong><u>Teenagers - My Chemical Romance</u></strong><br>
+		"Teenagers" is the fourth and final single and the eleventh track from My Chemical Romance's third studio album, The Black Parade (2006).
 		<br><br>
 		<audio controls>
   		<source src="Audio/Teenagers.mp3" type="audio/mpeg">
@@ -25,9 +26,10 @@
     	<br><br>
 
 	<p>
-		<img src="https://upload.wikimedia.org/wikipedia/en/thumb/7/74/Paramore_-_That%27s_What_You_Get.jpg/220px-Paramore_-_That%27s_What_You_Get.jpg">
+		<img id="rock" src="https://upload.wikimedia.org/wikipedia/en/thumb/7/74/Paramore_-_That%27s_What_You_Get.jpg/220px-Paramore_-_That%27s_What_You_Get.jpg">
 		<br>
-		<strong><u>That's What You Get - Paramore</u></strong>
+		<strong><u>That's What You Get - Paramore</u></strong><br>
+		"That's What You Get" is a song by American rock band Paramore from their second studio album, Riot! (2007). It is the second Australian single, third American single and the fourth UK single. The song was released to modern rock radio on March 25 and to contemporary hit radio on April 22 in the US. "That's What You Get" was released digitally as an extended play in April 2008 and physically as a CD single in May 2008. The song is featured as a playable track in the video game Rock Band 2.
 		<br><br>
 		<audio controls>
   		<source src="Audio/Thats_What_You_Get.mp3" type="audio/mpeg">
@@ -37,9 +39,10 @@
     	<br><br>
 
 	<p>
-		<img src="https://i.scdn.co/image/ab67616d0000b273e1791251d30cd8f6ef693154">
+		<img id="rock" src="https://i.scdn.co/image/ab67616d0000b273e1791251d30cd8f6ef693154">
 		<br>
-		<strong><u>I Don't Love You - My Chemical Romance</u></strong>
+		<strong><u>I Don't Love You - My Chemical Romance</u></strong><br>
+		"I Don't Love You" is the third single from My Chemical Romance's third studio album, The Black Parade. Its music video premiered on the band's official YouTube and MySpace pages on March 7, 2007, and the single was released on April 3, 2007.
 		<br><br>
 		<audio controls>
   		<source src="Audio/I_Dont_Love_You.mp3" type="audio/mpeg">
