--- a/Codes/CARAMOAN_JPN.html
+++ b/Codes/CARAMOAN_JPN.html
@@ -13,9 +13,10 @@
     <hr width="100%" size="3" color="lime" noshade>
     <center>
 	<p>
-		<img src="https://images.genius.com/ea0ed207d97747fc8130b39be4748564.1000x1000x1.jpg">
+		<img id="jpn" src="https://images.genius.com/ea0ed207d97747fc8130b39be4748564.1000x1000x1.jpg">
 		<br>
-		<strong><u>Tabun - YOASOBI</u></strong>
+		<strong><u>Tabun - YOASOBI</u></strong><br>
+		"Tabun" (たぶん, "Probably") is a song recorded by Japanese duo Yoasobi from their debut EP, The Book (2021). It was released on July 20, 2020, as a digital single, through Sony Music Entertainment Japan. 
 		<br><br>
 		<audio controls>
   		<source src="Audio/Tabun.mp3" type="audio/mpeg">
@@ -25,9 +26,10 @@
     	<br><br>
 
 	<p>
-		<img src="https://i.scdn.co/image/ab67616d0000b2733dcf67594e3c4f8f2dba0b82">
+		<img id="jpn" src="https://i.scdn.co/image/ab67616d0000b2733dcf67594e3c4f8f2dba0b82">
 		<br>
-		<strong><u>Bad Example - Takayan</u></strong>
+		<strong><u>Bad Example - Takayan</u></strong><br>
+		Suzuki Takaya (鈴木 たかや), better known as Takayan (たかやん), is a Japanese rapper, singer and music producer who uploaded his first original song to YouTube on July 21, 2016
 		<br><br>
 		<audio controls>
   		<source src="Audio/BadExample.mp3" type="audio/mpeg">
@@ -37,9 +39,10 @@
     	<br><br>
 
 	<p>
-		<img src="https://images.genius.com/0c17eb4a2364958fb2a403ea6680585d.902x902x1.jpg">
+		<img id="jpn" src="https://images.genius.com/0c17eb4a2364958fb2a403ea6680585d.902x902x1.jpg">
 		<br>
-		<strong><u>Napori - Vaundy</u></strong>
+		<strong><u>Napori - Vaundy</u></strong><br>
+		Vaundy is a Japanese musician. He started his career in 2019 by independently uploading online, before breaking out late in the year with the song "Tokyo Flash". He has released songs for multiple TV shows, including "Chainsaw Blood" for Chainsaw Man and "Hadaka no Yuusha" for Ranking of Kings.
 		<br><br>
 		<audio controls>
   		<source src="Audio/Napori.mp3" type="audio/mpeg">
