--- a/Codes/CARAMOAN_Movie.html
+++ b/Codes/CARAMOAN_Movie.html
@@ -17,23 +17,29 @@
 	</p>	
 	
     	<p> 
+		<strong><u>Howl's Moving Castle</u></strong>
+		<br>
+		<blockquote>
+			Sophie (Emily Mortimer) has an uneventful life at her late father's hat shop, but all that changes when she befriends wizard Howl (Christian Bale), who lives in a magical flying castle. However, the evil Witch of Waste (Lauren Bacall) takes issue with their budding relationship and casts a spell on young Sophie, which ages her prematurely. Now Howl must use all his magical talents to battle the jealous hag and return Sophie to her former youth and beauty.
+		</blockquote>
 		<video width="520" height="340" poster="https://pic-bstarstatic.akamaized.net/ugc/4f10c270b1733557a1002b9b2b7061c0.jpeg" controls>
   			<source src="Video/Movie/HowlsMovingCastle.mp4" type="video/mp4">
   				Your browser does not support the video tag.
 		</video>
-		<br>
-		<strong><u>Howl's Moving Castle</u></strong>
-	</p>
+		</p>
     	<br><br>
 
 	<p>
+		<strong><u>Sonic the Hedgehog</u></strong>
+		<br>
+		<blockquote>
+			The world needed a hero -- it got a hedgehog. Powered with incredible speed, Sonic embraces his new home on Earth -- until he accidentally knocks out the power grid, sparking the attention of uncool evil genius Dr. Robotnik. Now, it's supervillain vs. supersonic in an all-out race across the globe to stop Robotnik from using Sonic's unique power to achieve world domination.
+		</blockquote>
 		<video width="520" height="340" poster="https://www.cnet.com/a/img/resize/0394d3c34ea15653512da913806923e2722cfce3/hub/2022/02/15/522fb8f4-bdfa-44f3-89b3-9c6d82d7358e/sonic22.jpg?auto=webp&fit=crop&height=900&width=1200" controls>
   			<source src="Video/Movie/SonicTheHedgehog.mp4" type="video/mp4">
   				Your browser does not support the video tag.
 		</video>
-		<br>
-		<strong><u>Sonic the Hedgehog</u></strong>
-	</p>
+		</p>
 	
 	This is the last page, click <a href="#main">here</a> to go back.
     </center>
