--- a/Codes/CARAMOAN_DreamPlaces_ITAD.html
+++ b/Codes/CARAMOAN_DreamPlaces_ITAD.html
@@ -22,11 +22,14 @@
 			<img src="Image/Places.png" usemap="#mainMap"><br>
 			
 			<map name="mainMap">
+			<!-- RECTANGLES-->
 				<area shape="rect" coords="270,210,520,350" alt="Japan Place" href="japanPage.html" target="newSpace"/>
 				<area shape="rect" coords="50,240,260,530" alt="Italy Place" href="italyPage.html" target="newSpace"/>
 				<area shape="rect" coords="350,30,520,190" alt="London Place" href="londonPage.html" target="newSpace"/>
-				<area shape="circle" coords="610,420,90" alt="Singapore Place" href="singaporePage.html" target="newSpace"/>
 				<area shape="rect" coords="720,30,850,175" alt="France Place" href="francePage.html" target="newSpace"/>
+			<!-- CIRCLES-->
+				<area shape="circle" coords="610,420,90" alt="Singapore Place" href="singaporePage.html" target="newSpace"/>
+			<!-- POLYGONS-->
 				<area shape="poly" coords="69,28,96,92,180,158,228,61,183,30" alt="book" title="notes" href="notesPage.html" target="newSpace"/>
 			</map>
 		</div>
