--- a/Codes/japanPage.html
+++ b/Codes/japanPage.html
@@ -16,13 +16,15 @@
 		<div align="center">
 			
 			<img class="place" src="Image/Japan.jpg"><br>
+			<div class="clearFixContainer">
 			<p>
+			<img class="flags" src="https://i.pinimg.com/originals/70/ff/11/70ff11f5565dc5a3774ea54c2d2d8a87.jpg" title="Japanese Flag" alt="Flag of Japan"/>
 			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 			<b>Japan</b> is an island country in East Asia. It is situated in the northwest Pacific Ocean and is bordered on the west by the Sea of Japan, extending from the Sea of Okhotsk in the north toward the East China Sea, Philippine Sea, and Taiwan in the south.
 			<br><br>
 			
 			I wanted <strong>to visit this place</strong> is because the technology is very advanced and It has wondrous places and amazing sights to see.
-			<br>Here are some things that I want to do when I come to Japan:<br>
+			<br><div class="ToDo" align="left">Here are some things that I want to do when I come to Japan:</div><br>
 			</p>
 			
 			<div class="con">
@@ -44,6 +46,7 @@
 			</figure>
 			</div>
 			<p>
+			</div>
 			<br>
 			<a href="#main">To top</a>.
 			</p>
