--- a/Codes/italyPage.html
+++ b/Codes/italyPage.html
@@ -14,11 +14,14 @@
     <hr width="100%" size="3" color="lime" noshade>
     <center>
 			<img class="place" src="Image/Italy.jpg"><br>
+			<div class="clearFixContainer">
 			<p>
+			<img class="flags" src="https://addons-media.operacdn.com/media/CACHE/images/themes/25/123925/1.0-rev1/images/be92e9fa-1fc6-489a-871e-7375471d91f9/087b387f42dd09fde9382227eb4320ce.jpg" title="Italy Flag" alt="Flag of Italy"/>
 			<b>Italy</b>, a European country with a long Mediterranean coastline, has left a powerful mark on Western culture and cuisine. Its capital, Rome, is home to the Vatican as well as landmark art and ancient ruins. Other major cities include Florence, with Renaissance masterpieces such as Michelangelo’s "David" and Brunelleschi's Duomo; Venice, the city of canals; and Milan, Italy’s fashion capital.
 			<br><br>
 			
-			I wanted <strong>to visit this place</strong> because there are different kinds of art. The place is also sparkling with azure waters that can be seen everywhere, and you can experience chilling on a boat while visiting other places. Here are <u>some things that I want to do</u> when I come to Italy:<br>
+			I wanted <strong>to visit this place</strong> because there are different kinds of art. The place is also sparkling with azure waters that can be seen everywhere, and you can experience chilling on a boat while visiting other places. <br>
+			<div class="ToDo" align="left">Here are <u>some things that I want to do</u> when I come to Italy:</div><br>
 			</p>
 			<div class="con">
 			<figure>
@@ -38,6 +41,7 @@
 				<figcaption>Eat Pastas and Pizza in Italy</figcaption>
 			</figure>
 			</div><p>
+			</div>
 			<br>
 			<a href="#main">To top</a>.
 			</p>
